--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root{
+  --boarder-color :#e09850;
+  --li-boarders : #ededed; 
+}
+
 * {
   box-sizing: border-box;
 }
@@ -53,9 +58,10 @@ input[type='text'] {
 }
 
 .meals {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
 }
 
@@ -63,6 +69,7 @@ input[type='text'] {
   cursor: pointer;
   position: relative;
   height: 180px;
+  margin: 10px;
   width: 180px;
   text-align: center;
 }
@@ -91,3 +98,45 @@ input[type='text'] {
 .meal:hover .meal-info {
   opacity: 1;
 }
+
+.single-meal{
+  margin: 30px auto;
+  width: 70%;
+}
+
+.single-meal img{
+  width: 300px;
+  height: 300px;
+  border: 4px solid #fff;
+  border-radius: 5px;
+}
+
+.single-meal-info{
+  margin: 10px;
+  padding: 30px;
+  border: 2px dashed var(--boarder-color);
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.main p {
+  text-align: justify;
+  list-style: 1.5;
+  word-spacing: 3px;
+}
+
+.main ul{
+  list-style-type: none;
+}
+
+.main ul li{
+  background-color: #dedede;
+  border-radius: 5px;
+  color: #2d2013;
+  display: inline-block;
+  padding: 10px 15px ;
+  margin: 5px;
+}
+
+
+
